--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="../style/main.css" />
     <link rel="stylesheet" href="../style/reset.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="bakground">
+<div class="bakground">
         <header class="bakground__blok">
             <img class="bakground__icons" src="picture/Group.svg"></img>
             <button class="bakground__button">Blog</button>
