--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <button class="bakground__button">Blog</button>
         </header>
         <section class="title">
-            <p class="title__title">Make work happen <br>
+            <p class="title__title">Make work happen 
                 from anywhere.
             </p>
-            <p class="title__text">Fleex provides, manages and assists your <br>
-                remote employees with all they need to work <br>
+            <p class="title__text">Fleex provides, manages and assists your 
+                remote employees with all they need to work 
                 in the best conditions.
             </p>
             <button class="title__button">Request access</button>
@@ -37,11 +37,11 @@
     </section>
     <section class="about-blok">
         <div class="about-blok__box-a">
-            <p class="about-blok__title">Create the ultimate <br>
+            <p class="about-blok__title">Create the ultimate 
                 remote experience
             </p>
-            <p class="about-blok__text">Set a monthly budget for each team member and select the<br>
-                items you want in your catalogue. We only curate premium and<br>
+            <p class="about-blok__text">Set a monthly budget for each team member and select the
+                items you want in your catalogue. We only curate premium and
                 ergonomic products fit for your team's interior.
             </p>
             <button class="about-blok__button">Request access</button>
@@ -54,18 +54,18 @@
 
 
         <div class="middle-box__blok-b">
-            <p class="middle-box__title">Let your team choose<br>
+            <p class="middle-box__title">Let your team choose
                 the equipment they love </p>
-            <p class="middle-box__text">Give them the flexibility to pick what they want. Desks, chairs,<br>
+            <p class="middle-box__text">Give them the flexibility to pick what they want. Desks, chairs,
                 screens, printers, coffee-machines and even snacks.
-                You name <br>it. We deliver and set-up all the equipment for them.
+                You name it. We deliver and set-up all the equipment for them.
             </p>
             <button class="middle-box__button">Request access</button>
         </div>
     </section>
     <section class="blok-middle-manage">
         <div class="blok-middle-manage__contents">
-            <p class="blok-middle-manage__title">Manage everything<br> in one place</p>
+            <p class="blok-middle-manage__title">Manage everything in one place</p>
             <p class="blok-middle-manage__text">Get an overview of each of your employee's remote set-ups. Our dashboard
                 takes
                 care of your team's finances for you.
