--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 
         <div class="blok-chat__chat-bakground"></div>
         <div class="blok-chat__chat-blok">
-            <P class="blok-chat__title">Sit back, we take <br>
+            <P class="blok-chat__title">Sit back, we take 
                 care of support too.</p>
-            <p class="blok-chat__text">Our dedicated support team provides your team with the best<br>
+            <p class="blok-chat__text">Our dedicated support team provides your team with the best
                 remote working experience. We handle all of their requests,
-                so<br> you can focus on what matters.</p>
+                so you can focus on what matters.</p>
 
             <button class="blok-chat-button">Request access</button>
 
@@ -92,27 +92,27 @@
     </section>
     <section class=" blok-technologies">
         <div class="blok-technologies__content">
-            <p class="blok-technologies__title">Set yourself apart by<br> giving the modern<br> perks of tomorrow.</p>
+            <p class="blok-technologies__title">Set yourself apart by giving the modern perks of tomorrow.</p>
             <div class="blok-technologies__methods-box">
                 <div class="blok-methods-of-action">
                     <img class="blok-methods-of-action__icons-effective" src="picture/calculator.svg"></img>
                     <p class="blok-methods-of-action__title">Be cost-effective</p>
-                    <p class="blok-methods-of-action__text">With Fleex, you have the opportunity to offer<br> premium
-                        equipment that'd be too costly to buy<br> upfront. Your team gets to enjoy top-of-the-line<br>
+                    <p class="blok-methods-of-action__text">With Fleex, you have the opportunity to offer premium
+                        equipment that'd be too costly to buy upfront. Your team gets to enjoy top-of-the-line
                         products, at a competitive price for you.</p>
                 </div>
                 <div class="blok-methods-of-action">
                     <img class="blok-methods-of-action__icons-risk" src="picture/Plaster.svg"></img>
                     <p class="blok-methods-of-action__title">Reduce risk of injury</p>
-                    <p class="blok-methods-of-action__text">We identify your team's needs to make sure<br> they have the
-                        suitable tools to work in the<br> best conditions. We certify their remote<br> office to
+                    <p class="blok-methods-of-action__text">We identify your team's needs to make sure they have the
+                        suitable tools to work in the best conditions. We certify their remote office to
                         mitigate against injury at home.</p>
                 </div>
                 <div class="blok-methods-of-action">
                 <img class="blok-methods-of-action__icons-the-best-talent" src="picture/Magnet.svg"></img>
                     <p class="blok-methods-of-action__title">Engage and attract the best talent</p>
-                    <p class="blok-methods-of-action__text">Bring your company culture anywhere and<br> make your team
-                        happier with a set-up <br>they're truly comfortable in. Fleex is the<br> go-to perk for your
+                    <p class="blok-methods-of-action__text">Bring your company culture anywhere and make your team
+                        happier with a set-up they're truly comfortable in. Fleex is the go-to perk for your
                         remote policy.</p>
                 </div>
             </div>
