--- a/index.html
+++ b/index.html
@@ -119,22 +119,22 @@
     </section>
     <section class="blok-bakg-font">
         <div class="blok-bakg-font__content">
-            <p class="blok-bakg-font__title">Fleex is working<br> towards a<br> better future.</p>
+            <p class="blok-bakg-font__title">Fleex is working towards a better future.</p>
             <div class="blok-bakg-font__box">
                 <div class="blok-bakg-font__icon-dox">
                     <img class="blok-bakg-font__icons" src="picture/flower.svg"></img>
                     <p class="blok-bakg-font__text">Sustainability</p>
                 </div>
-                <p class="blok-bakg-font__text-box">— We consciously curate our products to<br> reduce our environmental
-                    footprint. We pick<br> premium materials so our products last in <br>time.</p>
+                <p class="blok-bakg-font__text-one">— We consciously curate our products to reduce our environmental
+                    footprint. We pick premium materials so our products last in time.</p>
             </div>
             <div class="blok-bakg-font__box">
                 <div class="blok-bakg-font__icon-dox">
                     <img class="blok-bakg-font__icons" src="picture/Circularity.svg"></img>
                     <p class="blok-bakg-font__text">Circularity</p>
                 </div>
-                <p class="blok-bakg-font__text-box">— We give our products a second life by<br> reconditioning them
-                    every time they get returned<br> to us. Zero waste is what we stand for.</p>
+                <p class="blok-bakg-font__text-two">— We give our products a second life by reconditioning them
+                    every time they get returned to us. Zero waste is what we stand for.</p>
             </div>
         </div>
     </section>
@@ -144,7 +144,7 @@
             <img class="blok-bakground-color__icon"src="picture/Vector1.svg"></img>
             <img class="blok-bakground-color__icon-text"src="picture/Vector2.svg"></img>
               </div>
-              <p class="blok-bakground-color__text">Fleex provides, manages and assists your<br> remote employees with all they need to work<br> in the best conditions.</p>
+              <p class="blok-bakground-color__text">Fleex provides, manages and assists your remote employees with all they need to work in the best conditions.</p>
           </div>
           <div class="blok-bakground-color__flag-box">
              <img class="flag"src="picture/Frame.svg"></img>
