--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
     <link rel="stylesheet" href="../style/main.css" />
     <link rel="stylesheet" href="../style/reset.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-<div class="bakground">
+    <div class="bakground">
         <header class="bakground__blok">
             <img class="bakground__icons" src="picture/Group.svg"></img>
             <button class="bakground__button">Blog</button>
         </header>
         <section class="title">
-            <p class="title__title">Make work happen 
+            <p class="title__title">Make work happen
                 from anywhere.
             </p>
-            <p class="title__text">Fleex provides, manages and assists your 
-                remote employees with all they need to work 
+            <p class="title__text">Fleex provides, manages and assists your
+                remote employees with all they need to work
                 in the best conditions.
             </p>
             <button class="title__button">Request access</button>
@@ -37,7 +39,7 @@
     </section>
     <section class="about-blok">
         <div class="about-blok__box-a">
-            <p class="about-blok__title">Create the ultimate 
+            <p class="about-blok__title">Create the ultimate
                 remote experience
             </p>
             <p class="about-blok__text">Set a monthly budget for each team member and select the
@@ -80,7 +82,7 @@
 
         <div class="blok-chat__chat-bakground"></div>
         <div class="blok-chat__chat-blok">
-            <P class="blok-chat__title">Sit back, we take 
+            <P class="blok-chat__title">Sit back, we take
                 care of support too.</p>
             <p class="blok-chat__text">Our dedicated support team provides your team with the best
                 remote working experience. We handle all of their requests,
@@ -109,7 +111,7 @@
                         mitigate against injury at home.</p>
                 </div>
                 <div class="blok-methods-of-action">
-                <img class="blok-methods-of-action__icons-the-best-talent" src="picture/Magnet.svg"></img>
+                    <img class="blok-methods-of-action__icons-the-best-talent" src="picture/Magnet.svg"></img>
                     <p class="blok-methods-of-action__title">Engage and attract the best talent</p>
                     <p class="blok-methods-of-action__text-three">Bring your company culture anywhere and make your team
                         happier with a set-up they're truly comfortable in. Fleex is the go-to perk for your
@@ -138,20 +140,21 @@
             </div>
         </div>
     </section>
-      <footer class="blok-bakground-color">
-          <div class="blok-bakground-color__box">
-          <div class="blok-bakground-color__box-icons">
-            <img class="blok-bakground-color__icon"src="picture/Vector1.svg"></img>
-            <img class="blok-bakground-color__icon-text"src="picture/Vector2.svg"></img>
-              </div>
-              <p class="blok-bakground-color__text">Fleex provides, manages and assists your remote employees with all they need to work in the best conditions.</p>
-          </div>
-          <div class="blok-bakground-color__flag-box">
-             <img class="flag"src="picture/Frame.svg"></img>
-             <p class="blok-bakground-color__English">EN</p> 
-          </div>
-          <p class="blok-bakground-color__еditions">© 2020 - Fleex. All rights reserved</p>
-      </footer>
+    <footer class="blok-bakground-color">
+        <div class="blok-bakground-color__box">
+            <div class="blok-bakground-color__box-icons">
+                <img class="blok-bakground-color__icon" src="picture/Vector1.svg"></img>
+                <img class="blok-bakground-color__icon-text" src="picture/Vector2.svg"></img>
+            </div>
+            <p class="blok-bakground-color__text">Fleex provides, manages and assists your remote employees with all
+                they need to work in the best conditions.</p>
+        </div>
+        <div class="blok-bakground-color__flag-box">
+            <img class="flag" src="picture/Frame.svg"></img>
+            <p class="blok-bakground-color__English">EN</p>
+        </div>
+        <p class="blok-bakground-color__еditions">© 2020 - Fleex. All rights reserved</p>
+    </footer>
 
 
 
